@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0">
+<assemblyIdentity
+    version=SXS_ASSEMBLY_VERSION
+    processorArchitecture=SXS_PROCESSOR_ARCHITECTURE
+    name=SXS_ASSEMBLY_NAME
+    type="win32"
+/>
+<description>assembly description</description>
+<dependency>
+    <dependentAssembly>
+        <assemblyIdentity
+            type="win32"
+            name="Microsoft.Windows.Common-Controls"
+            version="6.0.0.0"
+            processorArchitecture=SXS_PROCESSOR_ARCHITECTURE
+            publicKeyToken="6595b64144ccf1df"
+            language="*"
+        />
+    </dependentAssembly>
+</dependency>
+</assembly>
+
